Fix contrast issue on <a> and add :focus state on links

--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,7 @@ html {
 }
 
 a {
-  color: #568c36;
-  text-decoration: none;
+  color: #113c00;
 }
 
 a:hover {
@@ -39,6 +38,10 @@ a:hover {
 .nav a:hover {
   background-color: #fff;
   color: #113c00;
+}
+
+.nav a:focus {
+  border-color: #113c00;
 }
 
 .about {
